[package]
name = 'template-runtime'
version = '4.0.0-dev'
description = 'A fresh FRAME-based Substrate runtime, ready for hacking.'
authors = ['Duality Blockchain Solutions LLC <https://github.com/dualitynetwork>']
homepage = 'https://duality.network/'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/dualitynetwork/duality-node/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest', version = '5.0.0-dev' }

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }

frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', optional = true, tag = 'devhub/latest',  version = '4.0.0-dev' }
frame-executive = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
frame-system-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', optional = true, tag = 'devhub/latest',  version = '4.0.0-dev' }
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }

pallet-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
pallet-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
pallet-sudo = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
pallet-transaction-payment = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
scale-info = { default-features = false, features = ['derive'], version = '1.0' }

sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
sp-block-builder = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
sp-consensus-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '0.10.0-dev' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
sp-inherents = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
sp-offchain = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
sp-session = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }
sp-version = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'devhub/latest',  version = '4.0.0-dev' }

runtime-primitives = { default-features = false, path = "../primitives", version = '4.0.0-dev' }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'scale-info/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'runtime-primitives/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
